lintian-brush (0.100) UNRELEASED; urgency=medium

  * Drop ognibuild to recommends; it's only used by debianize.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 02 Mar 2021 14:59:45 +0000

lintian-brush (0.99) unstable; urgency=medium

  * Also update 'set -e' in postrm files. Closes: #983347

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 22 Feb 2021 17:53:37 +0000

lintian-brush (0.98) unstable; urgency=medium

  * Add fixer for cute-field.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 22 Feb 2021 16:29:57 +0000

lintian-brush (0.97) unstable; urgency=medium

  * Drop DEB_LDFLAGS_MAINT_APPEND ratther than leaving it empty.
  * Add fixer for obsolete-url-in-packaging.
  * Add basic fixer for debian-rules-parses-dpkg-parsechangelog.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 21 Feb 2021 23:41:21 +0000

lintian-brush (0.96) unstable; urgency=medium

  * Add fixer for debian-rules-uses-special-shell-variable.
  * Depend on newer version of debmutate, fixing maintscript
    manipulation.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 15 Feb 2021 19:24:59 +0000

lintian-brush (0.95) unstable; urgency=medium

  * Add fixer for debian-rules-uses-as-needed-linker-flag.
  * Use rules module from debmutate.
  * deb-scrub-obsolete: don't edit build dependencies for cdbs packages.
    Closes: #981528
  * Explicitly depend on now-split-out upstream-ontologist package.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 13 Feb 2021 01:03:17 +0000

lintian-brush (0.94) unstable; urgency=medium

  * debhelper-but-no-misc-depends: Also handle debhelper-compat.
  * Strip superfluous commas.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 27 Jan 2021 00:36:32 +0000

lintian-brush (0.93) unstable; urgency=medium

  * Improve locking for bzr branches.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 20 Jan 2021 21:55:38 +0000

lintian-brush (0.92) unstable; urgency=medium

  * Handle multiple instances of Reference: field.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 05 Jan 2021 22:22:44 +0000
