@@ -1,6 +1,7 @@
 lintian-brush (0.100) UNRELEASED; urgency=medium
 
   * Drop ognibuild to recommends; it's only used by debianize.
+  * Read field lists from lintian.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 02 Mar 2021 14:59:45 +0000
 
